# SnakeProject

./: mechanics.cpp  mechanics.cpp.EyLKWY  server.cpp  snake.yaml  snake_ai.cpp  snake_gui.py
SnakeProject/: CMakeLists.txt  mechanics.cpp  server.cpp  snake.yaml  snake_ai.cpp  snake_gui.py
SnakeProject/client_template/: CMakeLists.txt
SnakeProject/include/duels/snake/: mechanics.h  msg.h  msg_detail.h  snake_ai.h
client_template/: snake.cpp
include/duels/snake/: game.h  mechanics.h  msg.h  snake_ai.h
